extrator-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extrator-api
  labels:
    app: extrator-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: extrator-api
  template:
    metadata:
      labels:
        app: extrator-api
    spec:
      containers:
        - name: api
          image: sousacomz/extrator-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 500m
              memory: 128Mi
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/saude/health
              port: 8000
            periodSeconds: 300
          startupProbe:
            httpGet:
              path: /api/saude/health
              port: 8000
            periodSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - name: views
              mountPath: /app/api/views.json
              subPath: views.json
      volumes:
        - name: views
          configMap:
            name: api-views
