extrator-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extrator-api
  labels:
    app: extrator-api
spec:
  type: NodePort
  selector:
    app: extrator-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30080
